# preqin

./: .gitignore  README.md  crud_operations.py  database.py  main.py  models.py  package-lock.json  pyproject.toml
backend/: README.md  api.py  config.py  database.py  main.py  models.py  pyproject.toml  schemas.py  setup.py  test_api.py
database_creation/: db_config.json  import_csv.py
frontend/: package.json
frontend/src/: App.js
frontend/src/api/: investorApi.js  investorApi.test.js
frontend/src/component/: investorCommitmentSummaryButtons.js  investorCommitmentSummaryButtons.test.js
frontend/src/pages/: Investors.js  investorCommitment.js  investor_commitment.js
frontend/src/utils/: formatUtils.js  formatUtils.test.js
my-react-app/: package-lock.json  package.json
my-react-app/src/: App.js
my-react-app/src/pages/: Investors.js
