[project]
name = "preqin"
version = "0.1.0"
description = ""
authors = [
    {name = "Hao Wei Lee",email = "hao.lee@bp.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "react (>=4.3.0,<5.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
psycopg2 = "^2.9.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
